prereservations in planning

--- a/views/_not_assigned_bookings.erb
+++ b/views/_not_assigned_bookings.erb
@@ -4,15 +4,8 @@
      cursor: hand; 
    }
 </style>
-<div id="booking_list">
-  <form name="filter" class="guiblock">
-         <h3 class="left-float" style="position: relative; top: 5px">Reservas</h3>
-    <div class="formrow right-float">
-      <select id="filter" class="fieldcontrol">
-        <option value="all">Mostrar todos</option>
-      </select>
-    </div>
-  </form>
+<div class="guiblock" style="background: white">
+  <h4 class="left_text all-space" style="position: relative; left: -10px"><%=t.bookings_planning.bookings%></h4>
 </div>
 <div class="elements-list" style="clear:both">
   <table id="elements_table" class="table">
