--- a/views/bookings_planning.erb
+++ b/views/bookings_planning.erb
@@ -74,12 +74,96 @@
 		  <span id="month" class="left-margin"></span> - <span id="year" class="right-margin"></span>
 	    </span>
 		<span id="next" class="all-space over_cursor background-color-2 color-2 all-border-solid">&gt;</span>
+    <button id="new_prereservation" class="form-button blue-button" style="float: right; position: relative; top: -0.5em; right: 7em;"><%=t.bookings_planning.new_preservation%></button>
 	</div>
 </div>
 <div class="admin_content_wrapper">
-<table id="planning_table" style="table-layout: fixed; margin: 0 auto">
-</table>
-<div class="top-margin-2lines">
-  <%= partial(:not_assigned_bookings) %>
+  <table id="planning_table" style="table-layout: fixed; margin: 0 auto">
+  </table>
+  <div class="top-margin-2lines">
+    <div id="booking_list">
+      <form name="filter" class="guiblock">
+        <h3 class="left-float" style="position: relative; top: 5px"><%=t.bookings_planning.bookings_and_prereservations%></h3>
+        <div class="formrow right-float">
+          <select id="filter" class="fieldcontrol">
+            <option value="all"><%=t.bookings_planning.show_all%></option>
+          </select>
+        </div>
+      </form>
+    </div>
+    <div class="guiblock" style="background: white">
+      <h4 class="left_text all-space" style="position: relative; left: -10px"><%=t.bookings_planning.prereservations%></h4>
+    </div>
+    <div class="elements-list" style="clear:both">
+      <table id="prereservations_table" class="table">
+        <thead class="table-header">
+          <tr>
+            <th class="table-header-title" scope="col" style="width:20%"><%= t.bookings_planning.prereservations_table.resource%></th>
+            <th class="table-header-title" scope="col" style="width:15%"><%= t.bookings_planning.prereservations_table.date_from %></th>
+            <th class="table-header-title" scope="col" style="width:15%"><%= t.bookings_planning.prereservations_table.date_to %></th>         
+            <th class="table-header-title" scope="col" style="width:20%"><%= t.bookings_planning.prereservations_table.title%></th>
+            <th class="table-header-title" scope="col" style="width:30%"><%= t.bookings_planning.prereservations_table.notes%></th>
+            <th class="table-header-title" scope="col" style="width:10%"><%= t.bookings_planning.prereservations_table.actions%></th>
+          </tr>
+        </thead>
+        <tbody id="prereservations_tbody" class="table-tbody">             
+        </tbody>
+      </table>
+    </div>
+    <%= partial(:not_assigned_bookings) %>
+  </div>
 </div>
+<div id="prereservation_container" style="display:none">
+  <form name="element" class="form-element all-space" style="background: white; min-width: 300px">
+    <h3 id="prereservation_title"><%=t.bookings_planning.prereservation.create_title%></h3>
+    <input type="hidden" name="id" id="id"/>
+    <div class="formrow">
+      <label class="fieldtitle"><%=t.bookings_planning.prereservation.from%></label>
+      <input type="text" name="date_from" id="date_from" class="date_control" size="15" maxlength="10"/>
+      <% if @product_family.time_to_from %>
+        <input type="text" name="time_from" id="time_from" maxlength="5" size="5"/>
+      <% else %>
+        <input type="hidden" name="time_from" id="time_from"/>
+      <% end %>
+    </div>
+    <div class="formrow">
+      <label class="fieldtitle"><%=t.bookings_planning.prereservation.to%></label>
+      <input type="text" name="date_to" id="date_to" class="date_control" size="15" maxlength="10"/>
+      <% if @product_family.time_to_from %>
+        <input type="text" name="time_to" id="time_to" maxlength="5" size="5"/>
+      <% else %>
+        <input type="hidden" name="time_to" id="time_to"/>
+      <% end %>
+    </div>
+    <div class="formrow">
+      <label class="fieldtitle"><%=t.bookings_planning.prereservation.resource%></label>
+      <select name="booking_item_reference" id="booking_item_reference" class="fieldcontrol"></select>
+    </div>
+    <div class="formrow">
+      <label class="fieldtitle"><%=t.bookings_planning.prereservation.subject%></label>
+      <input type="text" name="title" id="title" class="fieldcontrol" size="15" maxlength="10"/>      
+    </div>
+    <div class="formrow">
+      <label class="fieldtitle"><%=t.bookings_planning.prereservation.notes%></label>
+      <textarea name="notes" id="notes" class="fieldcontrol" rows="2"></textarea>
+    </div>
+    <div class="navigation-bar bottom-margin">
+      <div class="navigation-bar-crud-buttons right-float">
+        <input id="prereservation_button" type="button" class="form-button green-button" value="<%=t.entitymanagement.create%>"/>
+      </div>
+    </div>     
+  </form>  
 </div>
+<script type="text/tmpl" id="script_prereservation_line">
+    <tr id="<%%=entity.id%>">
+      <td class="table-cell left_text" style="border-bottom:none"><%%= entity.booking_item_reference %></td>
+      <td class="table-cell" style="border-bottom:none"><%%= formatter.formatDate(entity.date_from,'dd.MM.yyyy')%> <%if @product_family.time_to_from%><%%=entity.time_from%><%end%> </td>
+      <td class="table-cell" style="border-bottom:none"><%%= formatter.formatDate(entity.date_to,'dd.MM.yyyy') %> <%if @product_family.time_to_from%><%%=entity.time_to%><%end%> </td>
+      <td class="table-cell" style="border-bottom:none"><%%= entity.title %> </td>
+      <td class="table-cell" style="border-bottom:none"><%%= entity.notes %></td>
+      <td class="table-cell" style="border-bottom:none">
+        <span class="ui-icon ui-icon-pencil edit-prereservation-icon" style="cursor:hand; cursor:pointer; display:inline-block" data-id="<%%=entity.id%>"></span>
+        <span class="ui-icon ui-icon-trash delete-prereservation-icon" style="cursor:hand; cursor:pointer; display:inline-block" data-id="<%%=entity.id%>"></span>      
+      </td>
+    </tr>
+</script>
