--- a/views/resources_occupation.erb
+++ b/views/resources_occupation.erb
@@ -11,7 +11,7 @@
  }
 </style>
 <div class="top-navigation-bar">
-  <h2 class="entity-title">Ocupación de recursos</h2>
+  <h2 class="entity-title">Disponibilidad</h2>
 </div>
 <div class="admin_content_wrapper all-space">
 
@@ -35,8 +35,6 @@
     </div>
   </div>
 
-    <h3>Resumen</h3>
-
     <table id="table" class="table">
       <thead class="table-header">
         <tr>
@@ -48,13 +46,13 @@
       <tbody>
         <tr>
           <% @detail.values.each do |value| %>
-            <td class="table-cell centered_text" scope="col" style="<%if value[:occupation]<value[:stock]%>background:green; color:white<%else%>background:red; color: white<%end%>"><%=value[:occupation]%>/<%=value[:stock]%></td>
+            <td class="table-cell centered_text" scope="col" style="<%if value[:occupation]<value[:stock]%>background:green; color:white<%else%>background:red; color: white<%end%>"><%=value[:stock] - value[:occupation]%>/<%=value[:stock]%></td>
           <% end %>
         </tr>
       </tbody>
     </table>
 
-    <h3>Stock disponible</h3>
+    <h3 class="highlight_block">Stock disponible</h3>
 
     <% @detail.each do |product, value| %>
       <% unless value[:available_stock].empty? %>
@@ -69,7 +67,7 @@
       <% end %>
     <% end %>
 
-    <h3>Detalle</h3>
+    <h3 class="highlight_block">Detalle de la ocupación</h3>
 
   <div>  
       <table id="table" class="table">
