--- a/views/resources_occupation.erb
+++ b/views/resources_occupation.erb
@@ -46,17 +46,23 @@
       <tbody>
         <tr>
           <% @detail.values.each do |value| %>
-            <td class="table-cell centered_text" scope="col" style="<%if value[:occupation]<value[:stock]%>background:green; color:white<%else%>background:red; color: white<%end%>"><%=value[:stock] - value[:occupation]%>/<%=value[:stock]%></td>
+            <td class="table-cell centered_text" scope="col" style="<%if value[:occupation]<value[:stock]%>background:green; color:white<%else%>background:red; color: white<%end%>">
+              <div><%=[0, value[:stock] - value[:occupation]].max%>/<%=value[:stock]%><%if value[:occupation]>value[:occupation_assigned]%>*<%end%>
+              <%if value[:occupation] > value[:occupation_assigned]%>
+                <br/>
+                <span class="smaller_text">(<strong><%=value[:occupation]-value[:occupation_assigned]%></strong> no asignado)</span>
+              <%end%>
+              </div>
+            </td>
           <% end %>
         </tr>
       </tbody>
     </table>
 
     <h3 class="highlight_block">Stock disponible</h3>
-
     <% @detail.each do |product, value| %>
       <% unless value[:available_stock].empty? %>
-        <h4><%=product%></h4>
+        <h4 class="bottom-border-solid"><%=product%></h4>
         <div class="container_12">
           <% value[:available_stock].each do |v| %>
           <div class="grid_3">
@@ -64,11 +70,40 @@
           </div> 
           <% end %>
         </div>
+        <%if value[:occupation] > value[:occupation_assigned]%>
+          <div class="all-space all-border-dashed"><strong><%=value[:occupation]-value[:occupation_assigned]%></strong> pendiente de asignar</div>
+        <%end%>
       <% end %>
     <% end %>
 
-    <h3 class="highlight_block">Detalle de la ocupación</h3>
+    <h3 class="highlight_block">Pendientes de asignar</h3>
+    <% @detail.each do |key, value| %>
+      <% unless @detail[key][:assignation_pending].empty? %>
+        <h4 class="bottom-border-solid"><%=key%></h4>
+        <table class="table">
+          <thead class="table-header">
+            <tr>
+              <th class="table-cell" scope="col" style="width:80px">Id</th>
+              <th class="table-cell" scope="col" style="width:150px">Info</th>
+              <th class="table-cell" scope="col" style="width:150px">Fecha inicio</th>
+              <th class="table-cell" scope="col" style="width:150px">Fecha fin</th>
+            </tr>
+          </thead>
+          <tbody>  
+            <% @detail[key][:assignation_pending].each do |item| %>
+              <tr>
+                <td class="table-cell"><%= item.id %></td>
+                <td class="table-cell"><%= item.title%></td>
+                <td class="table-cell"><%= item.date_from.strftime('%d.%m.%Y') %> <%if @product_family.time_to_from%><%=item.time_from %> <% end %></td>
+                <td class="table-cell"><%= item.date_to.strftime('%d.%m.%Y') %> <%if @product_family.time_to_from%><%=item.time_to %> <% end %></td>
+              </tr> 
+            <% end %>
+          </tbody>
+        </table>
+      <% end %>
+    <% end %>
 
+  <h3 class="highlight_block">Detalle de la ocupación</h3>
   <div>  
       <table id="table" class="table">
         <thead class="table-header">
